<resources>
    <string name="app_name">Timeclub</string>
    <string name="main_text">首页</string>
    <string name="country_text">外媒</string>
    <string name="mine_text">我的</string>
    <string name="attion_new_suser">推荐用户</string>
    <string name="show_all">显示全部</string>
    <string name="login_name">请输入手机号</string>
    <string name="login_pw">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_pw">忘记密码?</string>
    <string name="register">立即注册</string>
    <string name="login_third">或者使用第三方登录</string>
    <string name="weixin">微信</string>
    <string name="qq">QQ</string>
    <string name="weibo">微博</string>
    <string name="story_select">故事集选集</string>
</resources>
